--- a/index.html
+++ b/index.html
@@ -22,11 +22,8 @@
 <h1>Colégio Nicanor Bueno Mendes</h1>
 
 <p>
-O Colégio Nicanor Bueno Mendes oferece um Ensino Médio atualizado com 2
-opções de itinerários formativos. Tem por objetivo a formação integral do aluno, voltada para
-a construção de seu projeto de vida e para a formação dos aspectos físicos, cognitivos,
-socioemocionais e preparação para o mundo do trabalho, contribuindo para sua inserção na
-sociedade.
+minha loja de quadrinhos aqui temos quadrinhos antigos de 1872 ate 2021 temos todos os tipos 
+  cada anos do quadrinhos é um preço!!! temos a melhor qualidades e ainda melhor estar na promoção 
 </p>
 
 <p>
