--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Nicanor Bueno Mendes Contato</title>
+<title>< loja fr quadrinhos tem um e recomendamos os molhores/title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -24,13 +24,11 @@
 <img src=""
 
 <p>
-Entre em contato para agendar uma visita e tirar dúvidas sobre matrículas.Se
-você tem alguma dúvida, sugestão, reclamação, elogio ou qualquer outro comentário que
-deseja expor diretamente à Diretora, este é o canal direto.</p>
+Entre em contato para agendar uma visita temos até espaço para ler, uma cantinho bem maravilhos </p>
 
 <div>
 <strong>e-mail:</strong>
-julnicanorbueno@seed.pr.gov.br>
+temos os melhores para voce
 
 <strong>telefone:</strong>
 (43) 3626-1536
