--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Colégio Nicanor Bueno Mendes</title>
+<title>Ainda temos melhores promoção maravilhos vcs vão amar</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -28,9 +28,7 @@ minha loja de quadrinhos aqui temos quadrinhos antigos de 1872 ate 2021 temos to
 
 <p>
 
-Estamos lado a lado com o estudante, vivenciando experiências dentro e fora
-da sala de aula. Com formação humana, qualidade de ensino, resultados acadêmicos e
-incentivo ao protagonismo e à solidariedade, preparamos para o futuro.
+recomendamos os melhores para diverdir e aproveitar
 </p>
 
 <img src="https://scontent.fldb1-1.fna.fbcdn.net/v/t1.6435-
