--- a/noticias.html
+++ b/noticias.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Colégio Nicanor Bueno Mendes Notícias</title>
+As noticias está em todos os jornais das promoçoẽs
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
