--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div id="conteudo"> <!--Inicio do conteudo-->
 
-<h1>Colégio Nicanor Bueno Mendes</h1>
+<h1>loja de quadrinhos</h1>
 
 <p>
 minha loja de quadrinhos aqui temos quadrinhos antigos de 1872 ate 2021 temos todos os tipos 
