--- a/noticias.html
+++ b/noticias.html
@@ -61,12 +61,7 @@ a-6985262.jpg"> </center>
 
 <p>
 A Consciência Negra é celebrada, no Brasil, no dia 20 de novembro. Instituído
-
-em âmbito nacional mediante a lei no 12.519, de 10 de novembro de 2011.
-A ocasião é dedicada à reflexão sobre a inserção do negro na sociedade brasileira. A data foi
-escolhida por coincidir com o dia atribuído à morte de Zumbi dos Palmares, em 1695.
-Neste ano de 2022, com a participação dos professores, funcionários, estudantes e a
-comunidade organizaremos o Seminário Afro e Indígena aqui no Colégio.
+ no dia 25/25/27 as promoçoẽs ira ter os melhores não percam
 
 </p>
 
